# ROS2_easy

./: .gitignore  CONTRIBUTING.md  README.md  export_model_to_urdf.py  launch_conf_info.yaml  setup.cfg  simple_run.py  simple_run_caller.py
.github/: CONTRIBUTING.md
classes/: Package.py  common_packages_and_programs.py  launch_configuration.py
examples/simple_model_example/: export_model_to_urdf.py  readme.txt
examples/turtlebot3_example/: readme.txt  simple_run_caller.py
install/: local_setup.sh  setup.sh
install/model_pkg/share/model_pkg/: package.sh
install/model_pkg/share/model_pkg/model_pkg/: model.py
install/model_pkg/share/model_pkg/models/: base.dae  left_wheel.dae  right_wheel.dae
install/model_pkg/share/model_pkg/urdf/: diff_bot.sdf
log/: latest_build
ros2_easy/: gazebo_bash.sh  launch_conf_info.yaml  simple_run.py
ros2_easy/classes/: Package.py  launch_configuration.py  logger.py
src/: simple_run_caller.py
src/model_pkg/: README.txt  setup.py
src/model_pkg/model_pkg/: model.py
src/model_pkg/models/: base.dae  left_wheel.dae  right_wheel.dae
