[metadata]
name = ros2_easy
version = 0.03
author = rydb
author_email = rydb400@gmail.com
description = A collection of tools to remove ROS2 worflow hurdles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rydb/ROS2_easy
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True